# cordova-plugin-cpp-bridge

./: package.json
hooks/: after_plugin_add.js  after_prepare.js  before_plugin_rm.js
templates/: CMakeLists.txt
